// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csx.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow
//@csx

const x = {a: 3};
<A.B a={x.a} b={x.b} />;

=====================================output=====================================
//@flow
//@csx

const x = { a: 3 };
<A.B a={x.a} b={x.b} />;

================================================================================
`;

exports[`jsx.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow
// @jsx Preact.h

const x = {a: 3};
<A.B a={x.a} b={x.b} />;

=====================================output=====================================
//@flow
// @jsx Preact.h

const x = { a: 3 };
<A.B a={x.a} b={x.b} />;

================================================================================
`;
